<resources>
    <string name="app_name">Contenedores RSU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>

    <!-- Navigation Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="city">Valencia</string>
    <string name="rsu_description">Contenedores de Residuos Urbanos</string>
    <string name="batteries">Pilas</string>
    <string name="oil">Aceite</string>
    <string name="clothes">Ropa</string>
    <string name="trash">Residuos</string>
    <string name="plastic">Envases</string>
    <string name="cardboard">Cartón</string>
    <string name="glass">Vidrio</string>
    <string name="title_activity_rsuinformation">RSUInformationActivity</string>

    <!-- Content Provider -->
    <string name="content_authority">com.ricardogarfe.rsu.app</string>
</resources>
