<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_batteries" android:icon="@drawable/low_battery"
            android:title="@string/batteries" />
        <item android:id="@+id/nav_oil" android:icon="@drawable/oil"
            android:title="@string/oil" />
        <item android:id="@+id/nav_clothes" android:icon="@drawable/t_shirt"
            android:title="@string/clothes" />
        <item android:id="@+id/nav_waste" android:icon="@drawable/trash"
            android:title="@string/trash" />
        <item android:id="@+id/nav_plastic" android:icon="@drawable/plastic"
            android:title="@string/plastic" />
        <item android:id="@+id/nav_cardboard" android:icon="@drawable/cardboard"
            android:title="@string/cardboard" />
        <item android:id="@+id/nav_glass" android:icon="@drawable/glass"
            android:title="@string/glass" />
    </group>
</menu>